# IASA-NLP-Homework

Homework 2/News/: modeling.ipynb
Homework 3/: hw_3.ipynb
Homework 4/: hw_4.ipynb
Homework 4/src/: data.py  metrics.py  models.py  post_processing.py  test.py  text.py  train.py  training.py  validation.py
Homework 5/: hw_5.ipynb  modeling.ipynb
Homework 6/: hw_6.ipynb
Homework 7/: clustering.ipynb  universal_approach.py
Homework 7/src/: README.md  prompts.py  topic_modeling.py  universal_approach.py
Homework 8/: hw_8.ipynb
Homework 8/fast-api-service/: Dockerfile  docker-compose.yaml  pyproject.toml
Homework 8/fast-api-service/model/q_pegasus/: config.json
Homework 8/fast-api-service/service/: app.py
